<resources>
    <string name="app_name">Bookid</string>
    <string name="shazdeh">Shazdeh</string>
    <string name="background_shadow">background_shadow</string>
    <string name="shazdeh_details1">شازده فرفره کودکی بازیگوش است که در حال یادگیری مهارت‌های زندگی است. با خواندن مجموعه کتاب‌های شازده فرفره همراه ماجراهای بانمک او شوید ...</string>
    <string name="fili_box">fili_box</string>
    <string name="motazadha_box">motazadha_box</string>
    <string name="ninja_box">ninja_box</string>
    <string name="shazdeh_box">shazdeh_box</string>
    <string name="shazdeh_name">شازده فرفره</string>
    <string name="next_button">next_button</string>
    <string name="back_button">back_button</string>
    <string name="title_activity_shazde_collections">ShazdeCollectionsActivity</string>
    <string name="book1_name">من نمی‌خوام بخوابم!</string>
    <string name="book1_image">book1_image</string>
    <string name="book2_image">باشه میگم لطفا!</string>
    <string name="book2_name">باشه میگم لطفا!</string>
    <string name="book3_name">من دنبال دوست میگردم!</string>
    <string name="book4_name">وای حالم بده!</string>
    <string name="book5_name">می‌خواهم برنده شوم!</string>
    <string name="book6_name">دندانم را می‌خواهم!</string>
    <string name="close_button">Close Button</string>
    <string name="play_button">Play</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="game_option">game_option</string>
    <string name="padcast_option">padcast_option</string>
    <string name="puzzle_option">puzzle_option</string>
</resources>