<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_puzzle">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/backbutton"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless">
        </ImageButton>
        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="150dp"
            android:layout_height="74dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/next_button"
            android:src="@drawable/shazdeh_info"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackgroundBorderless" />
    </RelativeLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header"
        android:layout_marginTop="5dp"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="16dp"
        android:background="@drawable/puzzlebackground3">

        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book1_image"
                android:src="@drawable/puzzle1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book2_image"
                android:src="@drawable/puzzle2" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book3_name"
                android:src="@drawable/puzzle3" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book4_name"
                android:src="@drawable/puzzle4" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book5_name"
                android:src="@drawable/puzzle5" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="170dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book6_name"
                android:src="@drawable/puzzle6" />

        </RelativeLayout>


    </GridLayout>
</RelativeLayout>