<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/backbutton"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless">
        </ImageButton>
        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="150dp"
            android:layout_height="74dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/next_button"
            android:src="@drawable/shazdeh_info"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackgroundBorderless" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header"
        android:layout_marginTop="5dp"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book1_image"
                android:src="@drawable/book1_unlock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book1_name"
                android:textColor="@color/purple_500"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book2_image"
                android:src="@drawable/book2_lock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book2_name"
                android:textColor="@color/green_600"
                android:textSize="16sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book3_name"
                android:src="@drawable/book3_lock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book3_name"
                android:textColor="@color/blue_600"
                android:textSize="16sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book4_name"
                android:src="@drawable/book4_lock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book4_name"
                android:textColor="@color/orange_600"
                android:textSize="16sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book5_name"
                android:src="@drawable/book5_lock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book5_name"
                android:textColor="@color/green_700"
                android:textSize="16sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="176dp"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/bookBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/book6_name"
                android:src="@drawable/book6_lock" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@id/bookBox6"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/madasi"
                android:text="@string/book6_name"
                android:textColor="@color/blue_600"
                android:textSize="16sp"/>

        </RelativeLayout>

    </GridLayout>

</RelativeLayout>