<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/backbutton"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless">
        </ImageButton>
        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="150dp"
            android:layout_height="74dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/next_button"
            android:src="@drawable/shazdeh_info"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackgroundBorderless" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header"
        android:layout_marginTop="5dp"
        android:columnCount="1"
        android:rowCount="3"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/ar_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="AR_option"
                android:src="@drawable/ar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="واقعیت افزوده"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/purple_500"
                android:paddingRight="105dp"
                android:paddingTop="10dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="می‌تونی شازده فرفره رو  سه بعدی و  متحرک ببینی!"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/gray_300"
                android:paddingRight="105dp"
                android:paddingTop="36dp"
                android:textSize="12sp"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <ImageButton
                android:id="@+id/padcast_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/padcast_option"
                android:src="@drawable/padcast" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="پادکست + تصویر"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/purple_500"
                android:paddingRight="105dp"
                android:paddingTop="10dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="می‌تونی داستان  شازده فرفره  رو   گوش بدی و ببینی!"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/gray_300"
                android:paddingRight="105dp"
                android:paddingTop="36dp"
                android:textSize="12sp"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/game_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/game_option"
                android:src="@drawable/game" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="بازی"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/purple_500"
                android:paddingRight="105dp"
                android:paddingTop="10dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="می‌تونی همراه با  شازده فرفره کلی بازی انجام بدی!"
                android:fontFamily="@font/digi_madasi_bold"
                android:textColor="@color/gray_300"
                android:paddingRight="105dp"
                android:paddingTop="36dp"
                android:textSize="12sp"/>
        </FrameLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:lottie_rawRes="@raw/kids_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </GridLayout>

</RelativeLayout>


